hopefully fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   background: linear-gradient(334deg, #aec7ff, #2062ae, #011550);
   background-size: 180% 180%;
   animation: gradient-animation 6s ease infinite;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 .logo {
   font-weight: bold;
